Issue #87: TMDB Session-Encoding für ältere Fire OS Versionen kompatibel halten